change package namespace to v2